# libkrun

./: .gitignore  .gitmodules  Cargo.toml  Makefile  THIRD-PARTY  build_on_krunvm.sh  plan.md
.github/actions/setup-build-env/: action.yml
.github/workflows/: integration_tests.yml  unit_tests.yml
examples/: Makefile
examples/gui_vm/: Cargo.toml
examples/krun_gtk_display/: Cargo.toml
examples/krun_gtk_display/src/: display_backend.rs  display_worker.rs  input_backend.rs  lib.rs
examples/krun_gtk_display/src/scanout_paintable/: mod.rs
examples/rust_vm/: Cargo.toml
examples/rust_vm/src/: main.rs
include/: libkrun.h
init/: init.c
krun-sys/: Cargo.toml
src/arch/: Cargo.toml
src/arch/src/: lib.rs
src/arch/src/aarch64/: layout.rs
src/arch/src/x86_64/: layout.rs
src/arch_gen/: Cargo.toml
src/aws_nitro/: Cargo.toml
src/cpuid/: Cargo.toml
src/cpuid/src/: bit_helper.rs  brand_string.rs  common.rs  lib.rs
src/devices/: Cargo.toml  init
src/devices/src/legacy/: ioapic.rs  kvmgicv2.rs  kvmgicv3.rs
src/devices/src/virtio/: device.rs  file_traits.rs
src/devices/src/virtio/console/: device.rs  port_io.rs
src/devices/src/virtio/fs/: device.rs  dyn_filesystem.rs  filesystem.rs  kinds.rs  mod.rs  multikey.rs  server.rs  worker.rs
src/devices/src/virtio/fs/linux/: mod.rs  overlayfs.rs  passthrough.rs
src/devices/src/virtio/fs/macos/: mod.rs  overlayfs.rs  passthrough.rs
src/devices/src/virtio/fs/macos/overlayfs/: fs.rs  mod.rs  tests.rs
src/devices/src/virtio/fs/macos/overlayfs/tests/: create.rs  lookup.rs  metadata.rs  misc.rs  open.rs  read.rs  remove.rs  write.rs
src/devices/src/virtio/fs/tests/overlayfs/: create.rs  init_krun.rs  lookup.rs  metadata.rs  misc.rs  mod.rs  open.rs  read.rs  remove.rs  write.rs
src/devices/src/virtio/fs/tests/passthrough/: create.rs  init_krun.rs  metadata.rs  mod.rs
src/devices/src/virtio/net/: device.rs  mod.rs  worker.rs
src/devices/src/virtio/vsock/: device.rs  ip_filter.rs  mod.rs  muxer.rs
src/hvf/: Cargo.toml
src/kernel/: Cargo.toml
src/krun/: Cargo.toml
src/krun-api/: Cargo.toml
src/krun-api/src/: lib.rs
src/krun-api/src/api/: builders.rs  vm.rs
src/krun-api/src/backends/: fs.rs
src/krun/src/: lib.rs
src/krun/src/api/: builder.rs  builders.rs  exit_handle.rs  mod.rs  vm.rs
src/krun/src/backends/: console.rs  fs.rs  mod.rs  net.rs
src/krun_api/: Cargo.toml
src/krun_api/src/: lib.rs
src/krun_api/src/api/: builder.rs  error.rs
src/krun_api/src/backends/: mod.rs
src/krun_display/: Cargo.toml
src/krun_input/: Cargo.toml
src/libkrun/: Cargo.toml
src/libkrun/src/: lib.rs
src/polly/: Cargo.toml
src/rutabaga_gfx/: Cargo.toml
src/rutabaga_gfx/ffi/: Cargo.toml
src/smbios/: Cargo.toml
src/utils/: Cargo.toml
src/utils/src/macos/: epoll.rs
src/vmm/: Cargo.toml
src/vmm/src/: builder.rs  exit_signal.rs  lib.rs  resources.rs
src/vmm/src/device_manager/hvf/: mmio.rs
src/vmm/src/device_manager/kvm/: mmio.rs
src/vmm/src/macos/: vstate.rs
src/vmm/src/vmm_config/: fs.rs  vsock.rs
tests/guest-agent/: Cargo.toml
tests/macros/: Cargo.toml
tests/runner/: Cargo.toml
tests/test_cases/: Cargo.toml
