[package]
name = "msb_krun_arch"
version = "0.1.1"
authors = ["The Chromium OS Authors"]
edition = "2021"
license = "Apache-2.0 AND BSD-3-Clause"
description = "Architecture-specific support for msb_krun microVMs"
repository = "https://github.com/containers/libkrun"

[features]
tee = []
amd-sev = [ "tee" ]
tdx = [ "tee", "dep:tdx" ]
efi = []

[dependencies]
libc = ">=0.2.39"
vm-memory = { version = "~0.16", features = ["backend-mmap"] }
vmm-sys-util = ">= 0.14"

arch_gen = { package = "msb_krun_arch_gen", version = "0.1.1", path = "../arch_gen" }
smbios = { package = "msb_krun_smbios", version = "0.1.1", path = "../smbios" }
utils = { package = "msb_krun_utils", version = "0.1.1", path = "../utils" }

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = { version = ">=0.11", features = ["fam-wrappers"] }
kvm-ioctls = ">=0.21"
tdx = { version = "0.1.0", optional = true }

[dev-dependencies]
utils = { package = "msb_krun_utils", version = "0.1.1", path = "../utils" }
