[package]
name = "msb_krun_arch_gen"
version = "0.1.5"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"
license = "Apache-2.0 AND BSD-3-Clause"
description = "Generated architecture definitions for msb_krun microVMs"
repository = "https://github.com/containers/libkrun"

[dependencies]
