[package]
name = "msb_krun_aws_nitro"
version = "0.1.8"
edition = "2021"
license = "Apache-2.0"
description = "AWS Nitro Enclaves support for msb_krun microVMs"
repository = "https://github.com/containers/libkrun"

[features]
aws-nitro = []

[dependencies]
libc = "0.2"
nix = { version = "0.30", features = ["poll"] }
tar = "0.4"
vsock = "0.5"

devices = { package = "msb_krun_devices", version = "0.1.8", path = "../devices" }
log = "0.4"
signal-hook = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
nitro-enclaves = "0.6.0"
