[package]
name = "msb_krun_cpuid"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"
license = "Apache-2.0 AND BSD-3-Clause"
description = "CPUID handling for msb_krun microVMs"

[features]
tdx = []

[dependencies]
vmm-sys-util = ">= 0.14"

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = { version = ">=0.11", features = ["fam-wrappers"] }
kvm-ioctls = ">=0.21"
