[package]
name = "msb_krun"
version = "0.1.0"
authors = ["The libkrun Authors"]
edition = "2021"
description = "Native Rust API for libkrun microVMs"
repository = "https://github.com/containers/libkrun"
license = "Apache-2.0"

[features]
default = []
net = []
blk = []
gpu = ["krun_display"]
snd = []
tee = []
aws-nitro = ["dep:aws-nitro", "dep:nitro-enclaves"]
amd-sev = ["blk", "tee"]
tdx = ["blk", "tee"]
efi = ["blk", "net"]
input = ["krun_input", "vmm/input", "devices/input"]

[dependencies]
crossbeam-channel = ">=0.5.15"
libc = ">=0.2.39"
libloading = "0.8"
log = "0.4.0"

devices = { package = "msb_krun_devices", path = "../devices" }
polly = { package = "msb_krun_polly", path = "../polly" }
utils = { package = "msb_krun_utils", path = "../utils" }
vmm = { package = "msb_krun_vmm", path = "../vmm" }

# Optional dependencies
krun_display = { package = "msb_krun_display", path = "../krun_display", optional = true, features = ["bindgen_clang_runtime"] }
krun_input = { package = "msb_krun_input", path = "../krun_input", optional = true, features = ["bindgen_clang_runtime"] }

[target.'cfg(target_os = "macos")'.dependencies]
hvf = { package = "msb_krun_hvf", path = "../hvf" }

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = { version = ">=0.11", features = ["fam-wrappers"] }
kvm-ioctls = ">=0.21"
vm-memory = { version = ">=0.13", features = ["backend-mmap"] }
aws-nitro = { package = "msb_krun_aws_nitro", path = "../aws_nitro", optional = true }
nitro-enclaves = { version = "0.6.0", optional = true }
