[package]
name = "msb_krun_polly"
version = "0.1.4"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Event polling abstraction for msb_krun microVMs"
repository = "https://github.com/containers/libkrun"

[dependencies]
libc = ">=0.2.39"
utils = { package = "msb_krun_utils", version = "0.1.4", path = "../utils" }
